--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,18 @@
+buildscript {
+    repositories { mavenCentral() }
+
+    dependencies {
+        classpath group: 'org.jetbrains.kotlin', name: 'kotlin-serialization', version: '1.7.20'
+    }
+}
+
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.7.20'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.20'
 }
+
+apply plugin: 'kotlin'
+apply plugin: 'kotlinx-serialization'
 
 group 'pl.danowski.rafal'
 version '1.0-SNAPSHOT'
@@ -11,6 +23,7 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1"
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.1'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.8.1'
